# univeristy-db

./: .gitignore  CMakeLists.txt  DB.cpp  DB.hpp  Employee.cpp  Employee.hpp  Emplyee.cpp  IHasIndexNumber.hpp  IHasSalary.hpp  Person.cpp  Person.hpp  README.md  Student.cpp  Student.hpp  main.cpp  maintain.cpp  maintain.hpp  university-db  university-db.out
